treeview fox for bootstrap 5, changes to layout

--- a/kooplexhub/hub/templates/container/list.html
+++ b/kooplexhub/hub/templates/container/list.html
@@ -15,3 +15,15 @@
 {% block main_content_right %}
   {% include 'container/hint_list.html' %}
 {% endblock %}
+
+{% block navsearch %}
+<form class="d-flex" action="{% url 'service:l_search' %}" method="post">
+  {% csrf_token %}
+  <input class="form-control me-2" type="search" name="service" placeholder="Search environment" 
+    {% if search_value %}  
+      value="{{ search_value }}" 
+    {% endif %}  
+      aria-label="Search">
+  <button class="btn btn-outline-secondary" type="submit" name="button" value="search">Search</button>
+</form>
+{% endblock %}
