--- a/kooplexhub/hub/templates/navbar.html
+++ b/kooplexhub/hub/templates/navbar.html
@@ -17,10 +17,10 @@
         {% endif %}
         <li><a class="dropdown-item" href="/manual/" target="_blank">Documentation</a></li>
       </ul>
-      {% block navserach %}
+      {% block navsearch %}
       <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <input class="form-control me-2" disabled type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-secondary" type="submit" disabled>Search</button>
       </form>
       {% endblock %}
       {% include "navbarmenu_right.html" %}
