--- a/kooplexhub/hub/templates/project/join.html
+++ b/kooplexhub/hub/templates/project/join.html
@@ -1,14 +1,5 @@
 {% extends "layout.html" %}
 
-{% block header_extra %}
-{% comment %}
-FIXME
-{% endcomment %}
-  {% load staticfiles %}
-  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap4-toggle.min.css' %}">
-  <script src="{% static 'scripts/bootstrap4-toggle.min.js' %}"></script>
-{% endblock %}
-
 {% block submenu %}
   {% include 'project/project_submenu.html' with title="Join a collaboration" submenu="join" %}
 {% endblock %}
@@ -18,8 +9,12 @@ FIXME
   
 <form id="project-manage" class="form-horizontal" action="{% url 'project:join' %}" method="post">
   {% csrf_token %}
-    <p>Select those projects you want to join.</p>
-    {% render_table t_joinable %}
+    <h5>Use the switch select those projects you want to join</h5>
+    {% if t_joinable.data|length > 0 %}
+      {% render_table t_joinable %}
+    {% else %}
+      <p>You do not have any projects to join.</p>
+    {% endif %}
   <div class="float-end">
     <button type="submit" class="btn btn-primary" name="button" value="aply">Join projects</button>
     <button type="submit" class="btn btn-secondary" name="button" value="cancel">Cancel</button>
@@ -29,4 +24,16 @@ FIXME
 
 {% block main_content_right %}
   {% include 'project/hint_join.html' %}
+{% endblock %}
+
+{% block navsearch %}
+<form class="d-flex" action="{% url 'project:j_search' %}" method="post">
+  {% csrf_token %}
+  <input class="form-control me-2" type="search" name="project_or_creator" placeholder="Search project/creator" 
+    {% if search_value %}  
+      value="{{ search_value }}" 
+    {% endif %}  
+      aria-label="Search">
+  <button class="btn btn-outline-secondary" type="submit" name="button" value="search">Search</button>
+</form>
 {% endblock %}
