--- a/kooplexhub/hub/templates/project/partial.html
+++ b/kooplexhub/hub/templates/project/partial.html
@@ -1,45 +1,46 @@
 <div class="col">
-  <div class="card">
+  <div class="card text-dark bg-light border-info shadow">
 {% comment %}
     <img src="..." class="card-img-top" alt="...">
 {% endcomment %}
+    <div class="card-header bg-info">
+      <span class="badge rounded-pill bg-dark"><strong>{{ project.name }}</strong></span>
+      <div class="float-end">
+        {% if project.scope == project.SCP_PRIVATE %}
+          <i class="oi oi-key" aria-hidden="true" data-bs-toggle="tooltip" title="Private project" data-placement="top"></i>
+        {% else %}
+          <i class="oi oi-cloud" aria-hidden="true" data-bs-toggle="tooltip" title="Public project" data-placement="top"></i>
+        {% endif %}
+      </div>
+    </div>
     <div class="card-body text-dark bg-light">
-      <h5 class="card-title">
-        <span class="badge rounded-pill bg-secondary">
-          <strong>{{ project.name }}</strong>
-            {% if project.scope == project.SCP_PRIVATE %}
-              <i class="oi oi-key" aria-hidden="true" data-bs-toggle="tooltip" title="Private project" data-placement="top"></i>
-            {% else %}
-              <i class="oi oi-cloud" aria-hidden="true" data-bs-toggle="tooltip" title="Public project" data-placement="top"></i>
-            {% endif %}
-            {% if project.creator == user %}
-              <i class="ri-admin-fill" aria-hidden="true" data-bs-toggle="tooltip" title="You created it" data-placement="top"></i>
-            {% else %}
-              <i class="ri-team-fill" aria-hidden="true" data-bs-toggle="tooltip" title="You are collaborator" data-placement="top"></i>
-            {% endif %}
-	</span>
-      </h5>
+      {% if project.creator != user %}
+        <p class="card-text"><strong>Creator:</strong> {{ project.creator.profile.name_and_username }}</p>
+      {% endif %}
       <p class="card-text"><strong>Description:</strong> {{ project.description }}</p>
-      <p class="card-text"><strong>Info:</strong>
+      <p class="card-text">
        <div class="btn-group" role="group">
+	<strong>Info:</strong>
         {% include 'project/reports_button.html' %}
         {% include 'project/collaborators_button.html' %}
         {% include 'project/containers_button.html' %}
        </div>
       </p>
-      <p class="card-text"><strong>Control:</strong>
-          {% if project|is_admin:user %}
-            <a href="{% url 'project:configure' project.id %}" role="button" class="btn btn-secondary btn-sm"><span class="oi oi-wrench" aria-hidden="true" data-toggle="tooltip" title="Settings of project {{ project.name }}. You can modify collaboration and bind environments." data-placement="top" ></span></a>
-          {% else %}
-            <a href="#" role="button" class="btn btn-secondary btn-sm disabled"><span class="oi oi-wrench" aria-hidden="true" data-toggle="tooltip" title="You don't have permission to configure project {{ project.name }}." data-placement="top" ></span></a>
-          {% endif %}
-	  {% if binding.is_hidden %}
-            <a href="{% url 'project:show' project.id %}" role="button" class="btn btn-secondary btn-sm"><span class="oi oi-eye" aria-hidden="true" data-toggle="tooltip" title="You can unhide {{ project.name }}." data-placement="top"></span></a>
-	  {% else %}
-            <a href="{% url 'project:hide' project.id %}" role="button" class="btn btn-secondary btn-sm"><span class="oi oi-eye" aria-hidden="true" data-toggle="tooltip" title="You can hide {{ project.name }} from your list." data-placement="top"></span></a>
-	  {% endif %}
-          <a href="{% url 'project:delete' project.id %}" role="button" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure?');"><span class="oi oi-trash" aria-hidden="true" data-toggle="tooltip" title="Delete project {{ project.name }}." data-placement="top"></span></a>
-      </p>
+    </div>
+    <div class="card-footer bg-info">
+      <div class="float-end">
+        {% if project|is_admin:user %}
+          <a href="{% url 'project:configure' project.id %}" role="button" class="btn btn-secondary btn-sm"><span class="oi oi-wrench" aria-hidden="true" data-toggle="tooltip" title="Settings of project {{ project.name }}. You can modify collaboration and bind environments." data-placement="top" ></span></a>
+        {% else %}
+          <a href="#" role="button" class="btn btn-secondary btn-sm disabled"><span class="oi oi-wrench" aria-hidden="true" data-toggle="tooltip" title="You don't have permission to configure project {{ project.name }}." data-placement="top" ></span></a>
+        {% endif %}
+        {% if binding.is_hidden %}
+          <a href="{% url 'project:show' project.id %}" role="button" class="btn btn-secondary btn-sm"><span class="oi oi-eye" aria-hidden="true" data-toggle="tooltip" title="You can unhide {{ project.name }}." data-placement="top"></span></a>
+        {% else %}
+          <a href="{% url 'project:hide' project.id %}" role="button" class="btn btn-secondary btn-sm"><span class="oi oi-eye" aria-hidden="true" data-toggle="tooltip" title="You can hide {{ project.name }} from your list." data-placement="top"></span></a>
+        {% endif %}
+        <a href="{% url 'project:delete' project.id %}" role="button" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure?');"><span class="oi oi-trash" aria-hidden="true" data-toggle="tooltip" title="Delete project {{ project.name }}." data-placement="top"></span></a>
+      </div>
     </div>
   </div>
 </div>
