--- a/kooplexhub/hub/templates/project/containers_button.html
+++ b/kooplexhub/hub/templates/project/containers_button.html
@@ -1,13 +1,13 @@
 {% if services|length > 0 %}
 <div class="dropdown">
-  <a class="btn btn-secondary dropdown-toggle btn-sm" type="button" id="dc-svcs-{{ project.id }}" data-bs-toggle="dropdown" aria-expanded="false">
+  <a class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button" id="dc-svcs-{{ project.id }}" data-bs-toggle="dropdown" aria-expanded="false">
     <i class="oi oi-terminal"></i>: {{services|length}}
   </a>
   <ul class="dropdown-menu" aria-labelledby="dc-svcs-{{ project.id }}">
     {% for svc in services %}
       <li><span class="dropdown-item">
         <div class="btn-group" role="group" aria-label="control buttons">
-          <span class="badge rounded-spill bg-secondary">{{ svc.name }}
+          <span>{{ svc.name }}
             {% include 'container/startopen.html' with service=svc next_page="project:list" %}
             {% include 'container/stopremove.html' with service=svc next_page="project:list" %}
 	  </span>
