--- a/kooplexhub/hub/templates/project/new.html
+++ b/kooplexhub/hub/templates/project/new.html
@@ -14,8 +14,10 @@
           <input type="hidden" name="user_id" value="{{ user.id }}">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary">Create</button>
+          <div class="float-end">
+            <button type="submit" class="btn btn-primary" name="button" value="apply">Create</button>
+            <button type="submit" class="btn btn-secondary" name="button" value="cancel">Cancel</button>
+          </div>
         </div>
       </form>
     </div>
