--- a/kooplexhub/hub/templates/project/project_submenu.html
+++ b/kooplexhub/hub/templates/project/project_submenu.html
@@ -4,7 +4,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSubmenu">
      <div class="col-3">
-       <h5><span class="badge badge-secondary">{{ title }}</span></h5>
+       <h5><span class="badge bg-secondary">{{ title }}</span></h5>
      </div>
      <div class="col-8">
         <ul class="navbar-nav mr-auto">
