--- a/kooplexhub/hub/templates/report/newreport.html
+++ b/kooplexhub/hub/templates/report/newreport.html
@@ -12,18 +12,20 @@
       {{ f_report.r_tree }}
     </table>
     <div class="modal-footer">
-      <button type="submit" class="btn btn-default" name="button" value="apply"> Create</button>
-      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+      <div class="float-end">
+        <button type="submit" class="btn btn-primary" name="button" value="apply">Create</button>
+        <button type="submit" class="btn btn-secondary" name="button" value="cancel">Cancel</button>
+      </div>
     </div>
   </form>
 {% endblock %}
 
-{% block main_content_left %}
+{% block main_content_right %}
 <ul>
-        <li><span class="badge badge-pill badge-info">HTML</span> - static or interactive </li>
-        <li><span class="badge badge-pill badge-success">NB</span> - notebook</li>
-        <li><span class="badge badge-pill badge-warning">API</span> - a served host application with functional endpoints</li>
-        <li><span class="badge badge-pill badge-primary">BOKEH</span> - bokeh application</li>
+        <li><span class="badge rounded-pill bg-info">HTML</span> - static or interactive </li>
+        <li><span class="badge rounded-pill bg-success">NB</span> - notebook</li>
+        <li><span class="badge rounded-pill bg-warning">API</span> - a served host application with functional endpoints</li>
+        <li><span class="badge rounded-pill bg-primary">BOKEH</span> - bokeh application</li>
 </ul>
 {% endblock %}
 
